# full-exemplo-pi

backend/: pyproject.toml
