[project]
name = ""
version = ""
description = ""
authors = [
    {name = "dudubarbaro", email = "dudubarbaro"},
]
dependencies = [
    "django>=4.2.5",
    "setuptools>=68.2.2",
    "netifaces>=0.11.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
test = "python manage.py test"
startapp = "python manage.py startapp {args}"
loaddata = "python manage.py loaddata {args}"
dumpdata = "python manage.py dumpdata {args}"